Add variables and blocks

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <!-- script src="input-and-output.js"></script> 
-    <script src="operatos.js"></script> -->
-    <script src="values-and-types.js"></script>
+    <script src="operatos.js"></script>
+    <script src="values-and-types.js"></script> -->
+    <script src="variables-and-blocks.js"></script>
 </head>
 <body>
 
