Add conditional statements

--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <title>Document</title>
     <!-- script src="input-and-output.js"></script> 
     <script src="operatos.js"></script>
-    <script src="values-and-types.js"></script> -->
-    <script src="variables-and-blocks.js"></script>
+    <script src="values-and-types.js"></script>
+    <script src="variables-and-blocks.js"></script> -->
+    <script src="conditional-statements.js"></script>
 </head>
 <body>
+    
 
 </body>
 </html>
