--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <!-- script src="input-and-output.js"></script> 
     <script src="operatos.js"></script>
     <script src="values-and-types.js"></script>
-    <script src="variables-and-blocks.js"></script> -->
-    <script src="conditional-statements.js"></script>
+    <script src="variables-and-blocks.js"></script> 
+    <script src="conditional-statements.js"></script> -->
+    <script src="loops.js"></script>
 </head>
 <body>
-    
+
 
 </body>
 </html>
