--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <script src="operatos.js"></script>
     <script src="values-and-types.js"></script>
     <script src="variables-and-blocks.js"></script> 
-    <script src="conditional-statements.js"></script> -->
-    <script src="loops.js"></script>
+    <script src="conditional-statements.js"></script> 
+    <script src="loops.js"></script> -->
+    <script src="functions.js"></script>
 </head>
 <body>
 
