--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     <script src="values-and-types.js"></script>
     <script src="variables-and-blocks.js"></script> 
     <script src="conditional-statements.js"></script> 
-    <script src="loops.js"></script> -->
-    <script src="functions.js"></script>
+    <script src="loops.js"></script>
+    <script src="functions.js"></script> 
+    <script src="scope.js"></script> -->
+    <script src="challenge1.js"></script>
 </head>
 <body>
 
